movie section added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
               <button type="button" class="btn btn-primary" id = "searchButton">Search Movie</button>
             </form>
           </nav>
+
+          <div id="movie-searchable">
+            
+          </div>
         
     </div>
 
